--- a/index.html
+++ b/index.html
@@ -29,5 +29,24 @@
 			Span 2
 		</span>
 
+		<div class="input-container">
+			<input type="text">
+		</div>
+
+		<ul id="list">
+			<li>Item 1</li>
+			<li>Item 2</li>
+			<li>Item 3</li>
+			<li>Item 4</li>
+			<li>Item 5</li>
+			<li>Item 6</li>
+		</ul>
+
+
+
+		<div class="modal">
+			<div class="avatar-container"></div>
+		</div>
+
 	</body>
 </html>
